compilation_tests/wrong_input_size.stderr
error[E0308]: mismatched types
   --> compilation_tests/wrong_input_size.rs:11:17
    |
11  |     r2c.process(&mut input, &mut output).unwrap();
    |         ------- ^^^^^^^^^^ expected an array with a fixed size of 100 elements, found one with 99 elements
    |         |
    |         arguments to this function are incorrect
    |
note: associated function defined here
   --> src/lib.rs
    |
    |     fn process(
    |        ^^^^^^^
